--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -34,3 +34,11 @@ blockquote {
 .inline {
 	display: inline;
 }
+
+#modalAvaliacao, #modalAgendamento {
+	min-height: 500px !important;
+}
+
+#modalAvaliacao textarea {
+	min-height: 80px;
+}
